# spotipy_data_retrieval

./: .cache  .spotify_cache  README.md  analysis.ipynb  main.py  pyproject.toml  test.ipynb
.ipynb_checkpoints/: analysis-checkpoint.ipynb
libraries/analysis/: analysis_func.py
libraries/external_apps/: spotify_func.py
