[project]
name = "spotipy-data-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "spotipy>=2.25.1",
    "statsmodels>=0.14.4",
    "typing>=3.10.0.0",
]
